# TBF

./: README.md  pyproject.toml
cpp/include/: tbf_writer.hpp
cpp/tests/: write_fixture.cpp  writer_test.cpp
docs/: format.md
go/: go.mod
go/tbf/: cross_language_test.go  writer.go  writer_test.go
go/tests/gen_fixture/: main.go
python/tbf/: __init__.py  format.py  reader.py  writer.py
python/tests/: test_cross_language.py  test_python_rw.py
tools/: test_all.sh
